[package]
name = "sui-types"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
indexmap.workspace = true
serde.workspace = true
anyhow.workspace = true
bs58.workspace = true
hex.workspace = true
thiserror.workspace = true
blake2.workspace = true
strum.workspace = true
strum_macros.workspace = true

bcs.workspace = true
serde_repr.workspace = true
rand.workspace = true
serde_with.workspace = true
move-core-types.workspace = true
sui-macros.workspace = true
sui-protocol-config.workspace = true
